# playarr

./: Cargo.toml  README.md
.github/workflows/: docker-publish.yml  release.yml
playarr-desktop/: .gitignore  Cargo.toml  README.md  playarr.toml
playarr-desktop/src/: main.rs  ui.rs  utils.rs
playarr-desktop/src/pages/: episode.rs  mod.rs  onboarding.rs  overview.rs  player.rs  show.rs
playarr-desktop/src/server/: client.rs  image_cache.rs  mod.rs  network_cache.rs  serde.rs
playarr-desktop/src/widgets/: breadcrumbs.rs  icons.rs  mod.rs  playbar.rs  volume.rs
playarr-server/: .env.example  .gitignore  Dockerfile  Playarr.postman_collection.json  app.ts  cache.ts  deno.json  playarr.db
playarr-server/api/calendar/: repository.ts  router.ts
playarr-server/api/config/: execptions.ts  repository.ts  router.ts
playarr-server/api/movies/: repository.ts  router.ts
playarr-server/api/shows/: repository.ts  router.ts
playarr-server/config/: execptions.ts  repository.ts  router.ts
playarr-server/config/db/: tables.ts
playarr-server/config/db/migrations/: 0001_setup_and_seed.ts
playarr-server/db/: driver.ts  instance.ts  migrate.ts
playarr-server/db/migrations/: 0001_create_config_table.ts  0002_add_sonar_config_entry.ts  0003_add_radarr_config_entry.ts  setup_tables_and_seed.ts
playarr-server/db/tasks/: create_migration.ts  migrate.ts
playarr-server/series/: repository.ts  router.ts
playarr-server/shows/: repository.ts
playarr-server/startup/: env.ts  middleware.ts  routers.ts
playarr-server/tasks/: create_migration.ts  create_package.ts  migrate.ts
playarr-server/tv/: router.ts
playarr-server/utils/: radarr.ts  sonarr.ts
src/: main.rs  ui.rs
src/widgets/: mod.rs
