[package]
name = "playarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18"
egui_glow = { version = "0.18", features = [ "winit" ] }
glow = "0.12.0"
glutin = "0.28"
libmpv = { git = "https://github.com/anlumo/libmpv-rs.git", features=["build_libmpv"] }
