[package]
name = "playarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
egui_glow = { version = "0.20", features = [ "winit", "clipboard", "links" ] }
glow = "0.11"
glutin = "0.30.2"           # examples/pure_glow
raw-window-handle = "0.5.0"
libmpv = { git = "https://github.com/dylanblokhuis/libmpv-rs.git" }

[target.'cfg(target_os = "windows")'.dependencies]
libmpv = { git = "https://github.com/dylanblokhuis/libmpv-rs.git", features=["build_libmpv"] }
