[package]
name = "playarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
egui_glow = { version = "0.20", features = [ "winit", "clipboard", "links" ] }
winit = { version = "0.27.2", features = [ "x11", "wayland" ] }
glow = "0.11"
glutin = "0.30.2"           # examples/pure_glow
raw-window-handle = "0.5.0"
libmpv = { git = "https://github.com/dylanblokhuis/libmpv-rs.git" }
chrono = "0.4.23"
egui_extras = { version = "0.20.0", features = ["image", "svg", "usvg"] }
image = { version = "0.24", features = ["jpeg", "png"] }
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features= ["derive"] }
serde_json = "1.0.92"
bytes = "1.4.0"
toml = "0.7.2"